Thu Oct 17 18:45:41 2013  Koichi Sasada  <ko1@atdot.net>

	* string.c (STR_HEAP_SIZE): includes TERM_LEN(str).

	* string.c (rb_str_memsize): use STR_HEAP_SIZE().

Thu Oct 17 17:43:00 2013  Shugo Maeda  <shugo@ruby-lang.org>

	* vm_insnhelper.c (vm_call_method): set ci->me to 0 when the
	  original method of a refined method is undef to avoid SEGV.

	* vm_method.c (rb_method_entry_without_refinements): return 0 when
	  the original method of a refined method is undef to avoid SEGV.

	* test/ruby/test_refinement.rb: related test.

Thu Oct 17 17:38:36 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c, internal.h: rename ruby_xsizefree/realloc to
	  rb_sized_free/realloc.

	* array.c: catch up these changes.

	* string.c: ditto.

Thu Oct 17 17:32:51 2013  Koichi Sasada  <ko1@atdot.net>

	* array.c, string.c: use ruby_xsizedfree() and ruby_xsizedrealloc().

	* internal.h (SIZED_REALLOC_N): define a macro as REALLOC_N().

Thu Oct 17 17:11:17 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (console_emulator_p): check by comparison between
	  module handle of WriteConsoleW and kernel32.dll.

	* configure.in, win32/Makefile.sub, win32/setup.mak: no longer need
	  psapi.lib.

Thu Oct 17 16:53:30 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c, internal.h: add new internal memory mangement functions.
	  * void *ruby_xsizedrealloc(void *ptr, size_t new_size, size_t old_size)
	  * void ruby_xsizedfree(void *x, size_t size)
	  These functions acccept additional size parameter to calculate more
	  accurate malloc_increase parameter which control GC timing.
	  [Feature #8985]

Thu Oct 17 14:21:34 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/file.c (rb_file_expand_path_internal): fix memory leaks at
	  a non-absolute home exception.

Thu Oct 17 14:06:39 2013  Koichi Sasada  <ko1@atdot.net>

	* ext/objspace/object_tracing.c (newobj_i): fix memory leak.
	  There is possibility to remain info due to missing FREEOBJ event.